@@ -28,7 +28,8 @@
 #if defined(__GNUC__)
 #pragma GCC diagnostic push
 #pragma GCC diagnostic ignored "-Wunreachable-code"
-#elif defined(__clang__)
+#endif
+#if defined(__clang__)
 #pragma clang diagnostic push
 #pragma clang diagnostic ignored "-Wunused-function"
 #endif
@@ -40,7 +41,8 @@
 
 #if defined(__GNUC__)
 #pragma GCC diagnostic pop
-#elif defined(__clang__)
+#endif
+#if defined(__clang__)
 #pragma clang diagnostic pop
 #endif
 
