@@ -37,7 +37,6 @@
 struct md_reg_t {
     struct md_store_t *store;
     struct apr_hash_t *protos;
-    int was_synched;
     int can_http;
     int can_https;
     const char *proxy_url;
@@ -45,6 +44,27 @@ struct md_reg_t {
 
 /**************************************************************************************************/
 /* life cycle */
+
+static apr_status_t load_props(md_reg_t *reg, apr_pool_t *p)
+{
+    md_json_t *json;
+    apr_status_t rv;
+    
+    rv = md_store_load(reg->store, MD_SG_NONE, NULL, MD_FN_HTTPD_JSON, 
+                       MD_SV_JSON, (void**)&json, p);
+    if (APR_SUCCESS == rv) {
+        if (md_json_has_key(json, MD_KEY_PROTO, MD_KEY_HTTP, NULL)) {
+            reg->can_http = md_json_getb(json, MD_KEY_PROTO, MD_KEY_HTTP, NULL);
+        }
+        if (md_json_has_key(json, MD_KEY_PROTO, MD_KEY_HTTPS, NULL)) {
+            reg->can_https = md_json_getb(json, MD_KEY_PROTO, MD_KEY_HTTPS, NULL);
+        }
+    }
+    else if (APR_STATUS_IS_ENOENT(rv)) {
+        rv = APR_SUCCESS;
+    }
+    return rv;
+}
 
 apr_status_t md_reg_init(md_reg_t **preg, apr_pool_t *p, struct md_store_t *store,
                          const char *proxy_url)
@@ -58,7 +78,10 @@ apr_status_t md_reg_init(md_reg_t **preg, apr_pool_t *p, struct md_store_t *stor
     reg->can_http = 1;
     reg->can_https = 1;
     reg->proxy_url = proxy_url? apr_pstrdup(p, proxy_url) : NULL;
-    rv = md_acme_protos_add(reg->protos, p);
+    
+    if (APR_SUCCESS == (rv = md_acme_protos_add(reg->protos, p))) {
+        rv = load_props(reg, p);
+    }
     
     *preg = (rv == APR_SUCCESS)? reg : NULL;
     return rv;
@@ -618,34 +641,21 @@ static int find_changes(void *baton, md_store_t *store, md_t *md, apr_pool_t *pt
     return 1;
 }
 
-static apr_status_t load_props(md_reg_t *reg, apr_pool_t *p)
+apr_status_t md_reg_set_props(md_reg_t *reg, apr_pool_t *p, int can_http, int can_https)
 {
-    md_json_t *json;
-    apr_status_t rv;
-    
-    rv = md_store_load(reg->store, MD_SG_NONE, NULL, MD_FN_HTTPD_JSON, 
-                       MD_SV_JSON, (void**)&json, p);
-    if (APR_SUCCESS == rv) {
-        if (md_json_has_key(json, MD_KEY_PROTO, MD_KEY_HTTP, NULL)) {
-            reg->can_http = md_json_getb(json, MD_KEY_PROTO, MD_KEY_HTTP, NULL);
-        }
-        if (md_json_has_key(json, MD_KEY_PROTO, MD_KEY_HTTPS, NULL)) {
-            reg->can_https = md_json_getb(json, MD_KEY_PROTO, MD_KEY_HTTPS, NULL);
-        }
+    if (reg->can_http != can_http || reg->can_https != can_https) {
+        md_json_t *json;
+        
+        reg->can_http = can_http;
+        reg->can_https = can_https;
+        
+        json = md_json_create(p);
+        md_json_setb(can_http, json, MD_KEY_PROTO, MD_KEY_HTTP, NULL);
+        md_json_setb(can_https, json, MD_KEY_PROTO, MD_KEY_HTTPS, NULL);
+        
+        return md_store_save(reg->store, p, MD_SG_NONE, NULL, MD_FN_HTTPD_JSON, MD_SV_JSON, json, 0);
     }
-    else if (APR_STATUS_IS_ENOENT(rv)) {
-        rv = APR_SUCCESS;
-    }
-    return rv;
-}
-
-static apr_status_t sync_props(md_reg_t *reg, apr_pool_t *p, int can_http, int can_https)
-{
-    md_json_t *json = md_json_create(p);
-    md_json_setb(can_http, json, MD_KEY_PROTO, MD_KEY_HTTP, NULL);
-    md_json_setb(can_https, json, MD_KEY_PROTO, MD_KEY_HTTPS, NULL);
-    
-    return md_store_save(reg->store, p, MD_SG_NONE, NULL, MD_FN_HTTPD_JSON, MD_SV_JSON, json, 0);
+    return APR_SUCCESS;
 }
  
 /**
@@ -665,19 +675,12 @@ static apr_status_t sync_props(md_reg_t *reg, apr_pool_t *p, int can_http, int c
  *   c. compare MD acme url/protocol, update if changed
  */
 apr_status_t md_reg_sync(md_reg_t *reg, apr_pool_t *p, apr_pool_t *ptemp, 
-                         apr_array_header_t *master_mds, int can_http, int can_https) 
+                         apr_array_header_t *master_mds) 
 {
     sync_ctx ctx;
     md_store_t *store = reg->store;
     apr_status_t rv;
 
-    if (APR_SUCCESS != (rv = sync_props(reg, ptemp, can_http, can_https))) {
-        reg->was_synched = 0;
-        return rv;
-    }
-    
-    reg->was_synched = 1;
-    
     ctx.p = ptemp;
     ctx.conf_mds = master_mds;
     ctx.store_mds = apr_array_make(ptemp, 100, sizeof(md_t *));
@@ -843,20 +846,16 @@ static apr_status_t init_proto_driver(md_proto_driver_t *driver, const md_proto_
     /* If this registry instance was not synched before (and obtained server
      * properties that way), read them from the store.
      */
-    if (reg->was_synched 
-        || APR_SUCCESS == (rv = load_props(reg, p))) {
-
-        driver->proto = proto;
-        driver->p = p;
-        driver->challenge = challenge;
-        driver->can_http = reg->can_http;
-        driver->can_https = reg->can_https;
-        driver->reg = reg;
-        driver->store = md_reg_store_get(reg);
-        driver->proxy_url = reg->proxy_url;
-        driver->md = md;
-        driver->reset = reset;
-    }
+    driver->proto = proto;
+    driver->p = p;
+    driver->challenge = challenge;
+    driver->can_http = reg->can_http;
+    driver->can_https = reg->can_https;
+    driver->reg = reg;
+    driver->store = md_reg_store_get(reg);
+    driver->proxy_url = reg->proxy_url;
+    driver->md = md;
+    driver->reset = reset;
 
     return rv;
 }
