@@ -1,6 +1,8 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_md: v0.9.9, fix for applying challenge type based on available ports. [Stefan Eissing]
+
   *) mod_proxy_uwsgi: New UWSGI mod_proxy (sub)module contributed by unbit.com.
 
   *) mod_http2: v0.10.12, removed optimization for mutex handling in bucket beams that 
